<resources>
    <string name="app_name" translatable="false">Project Man</string>
    <string name="title_activity_add_project">AddProjectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="error_invalid_credentials">Username or Password is Incorrect </string>
    <string name="user_permission_user"> User </string>
    <string name="user_permission_manager"> Manager </string>
    <string name="user_permission_admin" translatable="false"> Admin </string>
    <string name="user_update_user_not_exists" > User Does Not Exist </string>
    <string name="user_update_success_start"> User </string>
    <string name="user_update_success_end" > Has Been Successfully Updated </string>
    <string name="user_update_error_username_not_unique">Username Inserted Is Not Unique</string>
    <string name="user_update_error_update_failure">Failed To Update User Please Try Again Later</string>

    <string name="project_update_success_start">"Project "</string>
    <string name="project_update_success_end"> Has Been Successfully Updated</string>
    <string name="project_update_error_update_failure">There was an error Updating the Project</string>
    <string name="project_update_error_title_not_unique">Inserted Title Is Not Unique</string>
    <string name="project_update_project_not_exists">Project Does Not Exist</string>

    <string name="task_update_task_not_exists">Task Does not Exist</string>
    <string name="task_update_success_start">Task </string>
    <string name="task_update_success_end"> Has Been Successfully Updated</string>
    <string name="task_update_error_update_failure">There was an error Updating the Task</string>

    <string name="commit_update_task_not_exists">Commit Does not Exist</string>
    <string name="commit_update_success_start" translatable="false">Commit </string>
    <string name="commit_update_success_end"> Has Been Successfully Updated</string>
    <string name="commit_update_error_update_failure">There was an error Updating the Commit</string>
    <string name="login_text" translatable="false">Login</string>
    <string name="register_string">Register</string>
    <string name="login_error_empty_username">Username Can Not Be Empty</string>
    <string name="login_error_empty_password">Password Can Not be Empty</string>
    <string name="image_preview">Profile Picture</string>
    <string name="select_image">Add Image</string>
    <string name="name_string">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_error">Passwords Do Not Match</string>
    <string name="user_create_success">User Registered Successfully</string>
    <string name="user_create_error_username_not_unique">Username Inserted Is Not Unique</string>
    <string name="delete_user_failure">Error Deleting User</string>
    <string name="delete_user_success">User Successfully Deleted</string>
    <string name="delete_project_failure">Error Deleting Project</string>
    <string name="delete_project_success">Project Delteted Successfully</string>
    <string name="delete_task_failure">Error Deleteing Task</string>
    <string name="delete_task_success">Task Delteted Successfully</string>
    <string name="delete_commit_failure">Error Deleting Commit</string>
    <string name="delete_commit_success">Commit Deleted Successfully</string>
    <string name="delete_user_from_project_failure">Error Removing User From Project</string>
    <string name="delete_user_from_project_success">User Removed From Project</string>
    <string name="register_error_empty_name">User Can\'t Be Empty</string>
    <string name="register_error_empty_username">Username Can\'t Be Empty</string>
    <string name="register_error_empty_email">Email Can\'t Be Empty</string>
    <string name="register_error_empty_password">Password Can\'t Be Empty</string>
    <string name="register_error_empty_confirmpassword">Confirmation Can\'t Be Empty</string>
    <string name="register_error_empty_image">Image Can\'t be Empty</string>
    <string name="register_error_not_unique_username">Username Already Taken</string>
    <string name="select_project">Select</string>
    <string name="permission_error">You do not have the Permissions</string>
    <string name="create_project_title_hint">Title</string>
    <string name="create_project_category_hint">Category</string>
    <string name="create_project_description_hint">Description</string>
    <string name="create_project_title">New Project</string>
    <string name="create_project">Create</string>
    <string name="create_project_no_input">Please Fill Out All Fields</string>
    <string name="create_project_success">Project Created Successfully</string>
    <string name="create_project_title_non_unique">The Project Title has been Taken</string>
    <string name="title">Title:</string>
    <string name="status">Status:</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="category">Category</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="no_authorisation">You do Not have the Permissions</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="users">Users</string>
    <string name="tasks">Tasks</string>
    <string name="email" translatable="false">Email</string>
    <string name="permission">Type</string>
    <string name="username" translatable="false">Username</string>
    <string name="manage_tasks">Manage Tasks</string>
    <string name="manage_users">Manage Users</string>
    <string name="edit_project_title">Edit Project</string>
    <string name="edit_project_success">Project Altered</string>
    <string name="close_project">Close Project</string>
    <string name="reopen_project">Open Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="select_string">Select</string>
    <string name="delete_string">Delete</string>
    <string name="create_task_title">New Task</string>
    <string name="task_create_success">Task Created</string>
    <string name="system_users">System Users</string>

</resources>