<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="30sp"
            android:textColor="@color/orange"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileLayout"
            android:layout_marginTop="16dp"
            android:hint="@string/name_string" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginTop="16dp"
            android:hint="Username" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="16dp"
            android:hint="email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_below="@id/email"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_below="@id/password"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_border"
            android:padding="8dp"
            android:layout_below="@id/registerTitle">
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="-3dp"
                android:contentDescription="@string/image_preview"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_image" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center"
            android:layout_below="@id/confirmPassword"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>