<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.ProfileActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:src="@mipmap/ic_launcher_round" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/projectTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/projectTitleContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Project Title"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/projectStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/status"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/projectStatusContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Project Status"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/projectDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/date"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/projectDateContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Date"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


   <LinearLayout
       android:id="@+id/projectCategory"
       android:layout_width="match_parent"
       android:layout_below="@id/topBar"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/categoryTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/topBar"
           android:layout_centerHorizontal="true"
           android:paddingStart="16dp"
           android:paddingEnd="6dp"
           android:text="@string/category"
           android:textSize="18sp" />

       <TextView
           android:id="@+id/categoryContent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/topBar"
           android:layout_centerHorizontal="true"
           android:text="Category"
           android:textSize="18sp" />

   </LinearLayout>

    <LinearLayout
        android:id="@+id/projectDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/projectCategory"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/description"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:layout_centerHorizontal="true"
            android:paddingStart="16dp"
            android:background="@drawable/orange_border"
            android:text="@string/description"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/projectDescription"
        android:id="@+id/buttonProjectInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnShowTasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tasks"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/btnShowUsers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/users"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@id/buttonProjectInfo"
        android:layout_above="@id/buttonLayout"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/buttonProjectInfo" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/buttonProjectInfo"
            android:id="@+id/users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />


    </LinearLayout>

    <LinearLayout
    android:id="@+id/buttonLayout"
    android:layout_width="match_parent"
    android:layout_height="69dp"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <Button
        android:id="@+id/btnReturnToMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:text="@string/previous" />

    <Button
        android:id="@+id/btnAlterProject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:text="@string/edit" />
    </LinearLayout>

    </RelativeLayout>
</ScrollView>