<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.ProfileActivity">
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:src="@mipmap/ic_launcher_round" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/projectTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_string"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/projectTitleContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="users name"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/projectStatusContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text ="email"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/permission"
                    android:paddingEnd="16dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userTypeContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Users Type"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@id/topBar"
        android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonProjectInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/buttonProjectInfo"
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/btnReturnToMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="home"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/btnAlterUserProject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Edit"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

</RelativeLayout>

